plugins {
    id 'java'
    id 'application'

    alias(libs.plugins.spring.boot)
    alias(libs.plugins.spring.boot.management)
}

group = 'org.wms'
version = '0.0.1'

application {
    mainClass = 'org.wms.Application'
}

java {
    toolchain {
        String javaVersion = findProperty("javaVersion")
        boolean debug = Boolean.valueOf(System.getenv("WMS_DEBUG"))

        try {
            languageVersion = JavaLanguageVersion.of(Integer.parseInt(javaVersion.substring(5)))
            if (debug) {
                println("JAVA_VERSION=" + javaVersion.substring(5))
            }
        } catch (NumberFormatException e) {
            languageVersion = JavaLanguageVersion.of(17)
            println("JAVA_VERSION= --Default 17")
        }
    }
}

configurations {
    compileOnly {
	extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation(libs.spring.starter.jdbc)
    implementation(libs.spring.starter.web)
    implementation(libs.spring.starter.jpa)
    implementation(libs.spring.starter.security)
    implementation(libs.spring.starter.validation)
    implementation(libs.springdoc.base)

    implementation(libs.jjwt.api)
    implementation(libs.jjwt.impl)
    implementation(libs.jjwt.jackson)

    // AWS Lambda dependencies
    implementation 'com.amazonaws.serverless:aws-serverless-java-container-springboot3:2.0.3'
    implementation 'com.amazonaws:aws-lambda-java-core:1.2.3'
    implementation 'com.amazonaws:aws-lambda-java-events:3.11.3'

    compileOnly(libs.lombok)
    runtimeOnly(libs.maridb.client)
    annotationProcessor(libs.lombok)

    testImplementation(libs.spring.starter.test)
    testImplementation(libs.spring.starter.security)
    testRuntimeOnly(libs.junit)
}

tasks.named("bootJar") {
    archiveClassifier = 'boot'
}

tasks.named("jar") {
    archiveClassifier = ''
    enabled = true
}

// Tarea para crear un ZIP optimizado para AWS Lambda
task buildZip(type: Zip) {
    from compileJava
    from processResources
    into('lib') {
        from configurations.runtimeClasspath
    }
}

// Dependencia para asegurar que el ZIP se construye después del bootJar
build.dependsOn buildZip

tasks.named('test') {
    useJUnitPlatform()
}
